# myMesh

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cube.cpp  cube.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh.x  shader_utils.cpp  shader_utils.hpp
DerivedData/mesh/: info.plist
DerivedData/mesh/Logs/Debug/: 108A8459-1148-426F-9A29-B6B5E9FBCB40.xcactivitylog  Cache.db
DerivedData/mesh/Logs/Issues/: 4DB40D47-73F8-40AE-A8FE-8830052646B5.xcactivitylog  797B6D95-3EF6-4EBE-88AB-287080378407.xcactivitylog  Cache.db
DerivedData/mesh/Logs/SCM/: 73A236D1-E922-467A-9403-8B03895F7247.xcactivitylog  AB1F2544-7449-42F9-A30B-F35A01DA25CF.xcactivitylog  Cache.db
DerivedData/mesh/TextIndex/: text-index.idx
bitmap/: bitmap.h
bulild_bin_Xcode/: CMakeCache.txt  cmake_install.cmake
bulild_bin_Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
bulild_bin_Xcode/Debug/: mesh.x
bulild_bin_Xcode/DerivedData/mesh/: info.plist
bulild_bin_Xcode/DerivedData/mesh/TextIndex/: text-index.idx
bulild_bin_Xcode/mesh.build/Debug/ALL_BUILD.build/: Script-4FF8C1BBA6134FCBB4E7B518.sh
bulild_bin_Xcode/mesh.build/Debug/ZERO_CHECK.build/: Script-B1637B77774047B8A09B946B.sh
bulild_bin_Xcode/mesh.build/Debug/mesh.x.build/: mesh.x.dep  mesh.x~.dep
bulild_bin_Xcode/mesh.xcodeproj/: project.pbxproj
cmake/: FindGLFW.cmake
mesh.xcodeproj/: project.pbxproj
mesh.xcodeproj/project.xcworkspace/xcshareddata/: mesh.xccheckout
shaders/: fragmentshader.frag  vertexshader.vert
(+31 files in other folders)
